# weatherapp

./: README.md  main.py  pyproject.toml  settings_template.json
api/: weather_api.py
custom_logging/: logger.py
models/: location.py  validation_error.py
services/: openweather_service.py
views/: home.py
