[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = "Demo weather app"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.18.2"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
pydantic = "^1.8.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
